# goopax-examples

./: .gitmodules  LICENSE.txt  README.txt  build-all.bat  build-all.sh
src/: CMakeLists.txt  deep-zoom-mandelbrot.cpp  fft.cpp  goopaxinfo.cpp  gpudirect.cpp  helloworld.cpp  mandelbrot-unspecified.cpp  mandelbrot.cpp  matmul.cpp  matrix.cpp  nbody.cpp  pi.cpp  simple.cpp  svm-pingpong.cpp
src/common/: gpu_array.hpp  matrix.hpp  output.hpp
src/cosmology/: .clang-format-ignore  CMakeLists.txt  cosmology.cpp  cosmology.hpp  cube.hpp  multipole_cart.hpp  multipole_sh.hpp  radix_sort.hpp  zero.hpp
src/cosmology/scripts/: build_dir  cosmology  create_random.sh  ics_goopax.conf.in  run.sh
src/ext/: CMakeLists.txt
